[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/InputDumper.gd" type="Script" id=1]
[ext_resource path="res://scripts/Actions.gd" type="Script" id=2]
[ext_resource path="res://scenes/tiles.tres" type="TileSet" id=3]
[ext_resource path="res://scripts/TileMap.gd" type="Script" id=4]
[ext_resource path="res://scripts/InfoPlayer.gd" type="Script" id=5]

[sub_resource type="ButtonGroup" id=1]

resource_local_to_scene = true
resource_name = "FlagButtonGroup"

[node name="World" type="Node" index="0"]

pause_mode = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="GameState" type="Node" parent="." index="0"]

script = ExtResource( 2 )
_sections_unfolded = [ "Pause" ]

[node name="TileMap" type="TileMap" parent="GameState" index="0"]

pause_mode = 1
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 4 )
_sections_unfolded = [ "Pause" ]

[node name="Select" type="ColorRect" parent="GameState/TileMap" index="0"]

visible = false
modulate = Color( 0, 1, 0, 0.294118 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Info" type="Node2D" parent="GameState" index="1"]

script = ExtResource( 5 )
_sections_unfolded = [ "Pause" ]

[node name="Player1" type="Label" parent="GameState/Info" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="Player2" type="Label" parent="GameState/Info" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 100.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Turn" type="Label" parent="GameState/Info" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_right = 200.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="Tile" type="Label" parent="GameState/Info" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_right = 100.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Speed" type="Label" parent="GameState/Info" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 700.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="SpeedSlider" type="HSlider" parent="GameState/Info" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 700.0
margin_top = 14.0
margin_right = 790.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Margin", "Pause" ]

[node name="FlagsNo" type="CheckBox" parent="GameState/Info" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 0
shortcut = null
group = SubResource( 1 )
text = "Pas de drapeaux"
flat = false
align = 0
_sections_unfolded = [ "Margin" ]

[node name="FlagsP1" type="CheckBox" parent="GameState/Info" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_top = 16.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = SubResource( 1 )
text = "Drapeaux joueur 1"
flat = false
align = 0
_sections_unfolded = [ "Margin" ]

[node name="FlagsP2" type="CheckBox" parent="GameState/Info" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_top = 32.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = SubResource( 1 )
text = "Drapeaux joueur 2"
flat = false
align = 0
_sections_unfolded = [ "Margin" ]


